# meridian-core

./: Cargo.toml  LICENSE  README.md  STATUS.md
.github/: CODEOWNERS
apps/vanguard-pwa/: .gitignore  DEPLOYMENT.md  README.md  index.html  manifest.json  sw.js
backups/usv-vanguard/: vanguard_params_20260427_042022.json  vanguard_params_20260427_042022.parm  vanguard_params_20260427_141757_post-revert.json  vanguard_params_20260427_141757_post-revert.parm
backups/usv-vanguard/firmware/: ardurover-4.6.3-CubeOrangePlus.apj  meridian-cubeorangeplus-v0.2-rescue.apj  meridian-cubeorangeplus-v0.3-rescue.apj  meridian-cubeorangeplus-v0.4-servo.apj  meridian-cubeorangeplus-v0.5-usb33.apj  meridian-cubeorangeplus-v0.6-pll3.apj  meridian-cubeorangeplus-v0.7-vbus.apj  meridian-cubeorangeplus-v0.8-fs-mode.apj  meridian-cubeorangeplus-v0.9-rtc-magic.apj  meridian-cubeorangeplus-v1.0-rtcapben.apj  meridian-cubeorangeplus-v1.1-hse24.apj  meridian-cubeorangeplus-v1.2-hse-vos-pwr.apj  meridian-cubeorangeplus-v1.3-h747cm7.apj  meridian-cubeorangeplus-v1.4-no-override.apj  meridian-cubeorangeplus.apj
boards/: CubeOrangePlus.toml
crates/meridian-autotune/src/: lib.rs  usv_tune.rs
crates/meridian-dds/: Cargo.toml
crates/meridian-dds/src/: cdr.rs  convert.rs  lib.rs  ros2_msgs.rs  topics.rs
crates/meridian-drivers/src/: esc_vesc.rs  lib.rs
crates/meridian-drl-tune/: Cargo.toml
crates/meridian-drl-tune/src/: agent.rs  experience.rs  lib.rs  reward.rs  safety.rs  state.rs  tests.rs
crates/meridian-nav/src/: current_estimator.rs  lib.rs
crates/meridian-platform-stm32/: Cargo.toml
crates/meridian-platform-stm32/src/: lib.rs  rescue.rs
crates/meridian-sitl/src/: lib.rs  physics_jetboat.rs
docs/: INDEX.md  LAKE_TEST_RUNBOOK.md  usv-deploy-log.md
docs/flash-sessions/: 2026-04-26_first-meridian-flash.md  meridian-firmware-version-history.md  v0.7-prep-and-safety-review.md
docs/vanguard/: 00_deployment_plan.md  01_hardware_identification.md  02_architecture_plan.md  03_zero_external_gps_architecture.md  04_competitive_analysis.md  05_field_kit_checklist.md  DEPLOYMENT_RUNBOOK.md  deployment_runbook.aux  deployment_runbook.out  deployment_runbook.tex  deployment_runbook.toc  route-b-onepager.html  route-b-pitch.html  vanguard_defaults.meridian-params
docs/vanguard/brief/: vanguard_brief.aux  vanguard_brief.out  vanguard_brief.tex  vanguard_brief_v2.aux  vanguard_brief_v2.out  vanguard_brief_v3.aux  vanguard_brief_v3.out  vanguard_brief_v4.aux  vanguard_brief_v4.out  vanguard_brief_v4.tex  vanguard_brief_v5.aux  vanguard_brief_v5.out  vanguard_brief_v5.tex  vanguard_brief_v6.aux  vanguard_brief_v6.out  vanguard_brief_v6.tex
gcs/: manifest.json  mission.html  replay.html  sw.js  test-console.html
gcs/css/: instruments.css  map.css
gcs/js/: app.js
gcs/js/fly/: adi.js
results/: scenario_1.json  scenario_10.json  scenario_11.json  scenario_12.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_7.json  scenario_8.json  scenario_9.json
tools/: analyze_flightlog.py  ardurover_setup_wizard.py  dronecan-param-query.py  full-check.py  here4-f9p-coldstart.py  here4-fix.py  here4-gnss-mode-fix.py  live-event-watcher.py  mavlink-recorder.py  mavlink-ws-bridge.py  meridian-usv-setup.bat  meridian-usv-sshkey-v2.bat  meridian-usv-sshkey.bat  mission-upload-test.py  mnp-radio-bridge.py  mnp-sitl-server.py  preflight-check.py  terrain.py  tristan-gcs-bridge.py  usv-bridge-rfd-install.ps1  usv-recorder-install.ps1  usv-sim-suite.py  ws-udp-relay.py
tools/orca-bridge/: README.md  config.example.yaml  requirements.txt
tools/orca-bridge/meridian_orca/: __init__.py  __main__.py  ais_fusion.py  bathy_cnn.py  bathy_cnn_filter.py  bathy_estimator.py  bathy_match.py  bathy_patch.py  bathy_rbpf.py  bathy_rbpf2.py  bathy_realworld_eval.py  bathy_supervisor.py  chart_gradient.py  chart_loader.py  cold_start.py  current_estimator.py  mock.py  state.py
tools/orca-bridge/meridian_orca/decode/: pgn.py
tools/orca-bridge/meridian_orca/mavlink/: out.py
tools/orca-bridge/meridian_orca/protocol/: orca_native.py  signalk.py  yacht_devices_raw.py
tools/orca-bridge/tests/: test_ais_fusion.py  test_bathy_comparison.py  test_bathy_match.py  test_bathy_mc_real.py  test_cold_start.py  test_pgn.py  test_supervisor.py
tools/orca-bridge/tests/fixtures/: bathy_matcher.pt  etopo_botany.csv  etopo_botany.npz
vehicles/: jetboat-single-nozzle.toml  usv-differential.toml
