[workspace]
resolver = "2"
members = [
    "crates/meridian-sync",
    "crates/meridian-math",
    "crates/meridian-types",
    "crates/meridian-bus",
    "crates/meridian-ekf",
    "crates/meridian-ahrs",
    "crates/meridian-control",
    "crates/meridian-mixing",
    "crates/meridian-nav",
    "crates/meridian-modes",
    "crates/meridian-mission",
    "crates/meridian-failsafe",
    "crates/meridian-fence",
    "crates/meridian-terrain",
    "crates/meridian-vehicle",
    "crates/meridian-hal",
    "crates/meridian-drivers",
    "crates/meridian-rc",
    "crates/meridian-comms",
    "crates/meridian-mavlink",
    "crates/meridian-log",
    "crates/meridian-params",
    "crates/meridian-sitl",
    "crates/meridian-arming",
    "crates/meridian-boardcfg",
    "crates/meridian-platform-sitl",
    "crates/meridian-platform-stm32",
    "crates/meridian-platform-linux",
    "crates/meridian-gcs",
    "crates/meridian-mount",
    "crates/meridian-camera",
    "crates/meridian-precland",
    "crates/meridian-autotune",
    "crates/meridian-drl-tune",
    "crates/meridian-fft",
    "crates/meridian-opendroneid",
    "crates/meridian-proximity",
    "crates/meridian-osd",
    "crates/meridian-notify",
    "crates/meridian-can",
    "crates/meridian-adsb",
    "crates/meridian-heli",
    "crates/meridian-wasm",
    "crates/meridian-parachute",
    "crates/meridian-gripper",
    "crates/meridian-winch",
    "crates/meridian-landing-gear",
    "crates/meridian-sprayer",
    "crates/meridian-dds",
    "bin/meridian-sitl",
    "bin/meridian-linux",
    "bin/meridian-stm32",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeranaias/meridian"

[workspace.dependencies]
# Internal crates
meridian-sync = { path = "crates/meridian-sync" }
meridian-math = { path = "crates/meridian-math" }
meridian-types = { path = "crates/meridian-types" }
meridian-bus = { path = "crates/meridian-bus" }
meridian-ekf = { path = "crates/meridian-ekf" }
meridian-ahrs = { path = "crates/meridian-ahrs" }
meridian-control = { path = "crates/meridian-control" }
meridian-mixing = { path = "crates/meridian-mixing" }
meridian-nav = { path = "crates/meridian-nav" }
meridian-modes = { path = "crates/meridian-modes" }
meridian-mission = { path = "crates/meridian-mission" }
meridian-failsafe = { path = "crates/meridian-failsafe" }
meridian-fence = { path = "crates/meridian-fence" }
meridian-terrain = { path = "crates/meridian-terrain" }
meridian-vehicle = { path = "crates/meridian-vehicle" }
meridian-hal = { path = "crates/meridian-hal" }
meridian-drivers = { path = "crates/meridian-drivers" }
meridian-rc = { path = "crates/meridian-rc" }
meridian-comms = { path = "crates/meridian-comms" }
meridian-mavlink = { path = "crates/meridian-mavlink" }
meridian-log = { path = "crates/meridian-log" }
meridian-params = { path = "crates/meridian-params" }
meridian-sitl = { path = "crates/meridian-sitl" }
meridian-platform-sitl = { path = "crates/meridian-platform-sitl" }
meridian-boardcfg = { path = "crates/meridian-boardcfg" }
meridian-platform-stm32 = { path = "crates/meridian-platform-stm32" }
meridian-platform-linux = { path = "crates/meridian-platform-linux" }
meridian-gcs = { path = "crates/meridian-gcs" }
meridian-mount = { path = "crates/meridian-mount" }
meridian-camera = { path = "crates/meridian-camera" }
meridian-precland = { path = "crates/meridian-precland" }
meridian-autotune = { path = "crates/meridian-autotune" }
meridian-fft = { path = "crates/meridian-fft" }
meridian-osd = { path = "crates/meridian-osd" }
meridian-notify = { path = "crates/meridian-notify" }
meridian-can = { path = "crates/meridian-can" }
meridian-adsb = { path = "crates/meridian-adsb" }
meridian-heli = { path = "crates/meridian-heli" }
meridian-wasm = { path = "crates/meridian-wasm" }
meridian-parachute = { path = "crates/meridian-parachute" }
meridian-gripper = { path = "crates/meridian-gripper" }
meridian-winch = { path = "crates/meridian-winch" }
meridian-landing-gear = { path = "crates/meridian-landing-gear" }
meridian-sprayer = { path = "crates/meridian-sprayer" }
meridian-dds = { path = "crates/meridian-dds" }

# External dependencies — shared versions
heapless = "0.8"
postcard = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
libm = "0.2"

[profile.release]
opt-level = "s"       # Size-optimized for embedded
lto = true
codegen-units = 1
debug = true          # Keep debug info for crash analysis
strip = false

[workspace.lints.clippy]
# Style lints — allow in flight algorithms where clarity > idiom
new_without_default = "allow"
derivable_impls = "allow"
len_without_is_empty = "allow"
too_many_arguments = "allow"
# Doc formatting
empty_line_after_doc_comments = "allow"
doc_list_item_indentation = "allow"
doc_lazy_continuation = "allow"
# Control flow style
collapsible_else_if = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
single_match = "allow"
possible_missing_else = "allow"
# Numeric patterns — ArduPilot algorithm ports use explicit math
manual_range_contains = "allow"
needless_range_loop = "allow"
approx_constant = "allow"
manual_clamp = "allow"
manual_is_multiple_of = "allow"
manual_memcpy = "allow"
manual_swap = "allow"
manual_div_ceil = "allow"
manual_abs_diff = "allow"
manual_rotate = "allow"
identity_op = "allow"
int_plus_one = "allow"
implicit_saturating_sub = "allow"
assign_op_pattern = "allow"
# Misc
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
let_and_return = "allow"
redundant_pattern_matching = "allow"
wildcard_in_or_patterns = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
double_parens = "allow"

[patch.crates-io]
# Vendored stm32h7xx-hal with Meridian patches:
#  - USB2.HIGH_SPEED set to false (was true) so synopsys-usb-otg runs
#    its FS init path. Required for the Cube Orange Plus's OTG2_FS
#    controller on PA11/PA12 — see vendor/stm32h7xx-hal/src/usb_hs.rs.
stm32h7xx-hal = { path = "vendor/stm32h7xx-hal" }

# AetherWareFoundation fork of synopsys-usb-otg with isb/dsb/dmb
# barriers inserted before the GRSTCTL.AHBIDL/CSRST polling loop.
# Cures the documented H7 + Cortex-M7 USB core-reset hang tracked
# in stm32h7xx-hal#503 — without this, the synopsys enable() can
# spin forever in the soft-reset wait, preventing USB enumeration.
synopsys-usb-otg = { git = "https://github.com/AetherWareFoundation/synopsys-usb-otg", branch = "work-h7coreresethang" }
